@@ -73,7 +73,8 @@ AC_ARG_ENABLE(doc, AS_HELP_STRING([--enable-doc],[Build documentation]),
  no)   AC_MSG_RESULT([no]);;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-doc) ;;
 esac],[AC_MSG_RESULT([no])])
-AC_CHECK_PROGS(LATEX,[latex]) 
+AC_CHECK_PROGS(LATEX,[latex])
+AC_CHECK_PROGS(BIBTEX,[bibtex])
 AC_CHECK_PROGS(DVIPS,[dvips]) 
 AC_CHECK_PROGS(DVIPDFT,[dvipdfm]) 
 AC_CHECK_PROGS(GNUPLOT,[gnuplot]) 
