@@ -17,4 +17,6 @@
 }%
 \fi\endgroup%
 
+\bibliographystyle{plainnat}
+
 \input{common/version.tex}
