@@ -1,0 +1,101 @@
+This file was created with JabRef 1.8b.
+Encoding: UTF-8
+
+@BOOK{Holton1992,
+  title = {An Introduction to Dynamic Meteorology},
+  publisher = {Academic Press},
+  year = {1992},
+  author = {J. R. Holton},
+  volume = {48},
+  series = {International Geophysics Series},
+  address = {New York},
+  edition = {3rd},
+  key = {math},
+}
+
+@BOOK{Hutter1983,
+  title = {Theoretical Glaciology},
+  publisher = {D. Reidel Publishing Company},
+  year = {1983},
+  author = {K. Hutter},
+  series = {Mathematical Approaches to Geophysics},
+  address = {Dordrecht, Boston, Lancaster},
+  key = {glac},
+}
+
+@TECHREPORT{Huybrechts1986,
+  author = {P. Huybrechts},
+  title = {A Three--Dimensional Time--dependent Numerical Model for Polar Ice
+	Sheets; some basic testing with a stable and efficient finite difference
+	scheme},
+  institution = {Geografisch Instituut, Vrije Universiteit Brussel},
+  year = {1986},
+  address = {Belgium},
+  key = {ism},
+}
+
+@BOOK{Paterson1994,
+  title = {The Physics of Glaciers},
+  publisher = {Butterworth--Heinemann},
+  year = {1994},
+  author = {W. S. B. Paterson},
+  address = {Oxford},
+  edition = {3rd},
+  key = {glaciology},
+}
+
+@ARTICLE{Payne1999,
+  author = {A. J. Payne},
+  title = {A thermomechanical model of ice flow in {W}est {A}ntarctica},
+  journal = {Climate Dynamics},
+  year = {1999},
+  volume = {15},
+  pages = {115-125},
+  key = {ism},
+}
+
+@ARTICLE{Payne1997,
+  author = {A. J. Payne and P. W. Dongelmans},
+  title = {Self--organisation in the thermomechanical flow of ice sheets},
+  journal = {Journal of Geophysical Research},
+  year = {1997},
+  volume = {102},
+  pages = {12219-12233},
+  number = {B6},
+  key = {ism},
+}
+
+@ARTICLE{Peltier2000,
+  author = {W. R. Peltier and D. L. Goldsby and D. L. Kohlstedt and L. Tarasov},
+  title = {Ice--age ice--sheet rheology: constraints from the {L}ast {G}lacial
+	{M}aximum form of the {L}aurentide ice sheet},
+  journal = {Annals of Glaciology},
+  year = {2000},
+  volume = {30},
+  pages = {163-176},
+  key = {ism},
+}
+
+@ARTICLE{Tarasov2000,
+  author = {L. Tarasov and W. R. Peltier},
+  title = {Laurentide ice sheet aspect ratio in models based on {G}len's flow
+	law},
+  journal = {Annals of Glaciology},
+  year = {2000},
+  volume = {30},
+  pages = {177-186},
+  key = {ism},
+}
+
+@ARTICLE{Tarasov1999,
+  author = {L. Tarasov and W. R. Peltier},
+  title = {Impact of thermomechanical ice sheet coupling on a model of the 100kyr
+	ice age cycle},
+  journal = {Journal of Geophysical Research},
+  year = {1999},
+  volume = {104},
+  pages = {9517-9545},
+  number = {D8},
+  key = {ism},
+}
+
